Install library for icons react-native-vector-icons

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apisauce": "^0.14.3",
     "react": "16.3.1",
     "react-native": "0.55.3",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^1.5.11",
     "react-navigation-redux-helpers": "^1.0.5",
     "react-redux": "^5.0.7",
