--- a/ios/trendSocialApp/Info.plist
+++ b/ios/trendSocialApp/Info.plist
@@ -41,7 +41,10 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string/>
 	<key>NSAppTransportSecurity</key>
-	<dict>
+	<dict>  
+      <key>NSAllowsArbitraryLoads</key><true/>  
+ 	</dict>
+	<!-- <dict>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
@@ -50,7 +53,7 @@
 				<true/>
 			</dict>
 		</dict>
-	</dict>
+	</dict> -->
 	<key>UIAppFonts</key>
 	<array>
 		<string>Entypo.ttf</string>
