--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "apisauce": "^0.14.3",
+    "moment": "^2.22.1",
     "react": "16.3.1",
     "react-native": "0.55.3",
     "react-native-vector-icons": "^4.6.0",
